--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,32 @@
+import com.julo.weatherdex.Build
+
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath Build.gradle
+        classpath Build.gradlePlugin
+        classpath Build.hiltGradlePlugin
+        classpath Build.kotlinSerialization
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        jcenter() // Warning: this repository is going to shut down soon
+    }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
