--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,28 @@
+import com.julo.weatherdex.AndroidConfig
+import com.julo.weatherdex.Build
+import com.julo.weatherdex.libs.AndroidX
+import com.julo.weatherdex.libs.UnitTesting
+import com.julo.weatherdex.libs.Google
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 32
+    compileSdkVersion AndroidConfig.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.julo.weatherdex"
-        minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        applicationId AndroidConfig.applicationId
+        minSdk AndroidConfig.minSdkVersion
+        targetSdk AndroidConfig.targetSdkVersion
+        versionCode AndroidConfig.versionCode
+        versionName AndroidConfig.versionName
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner Build.jUnitRunner
         vectorDrawables {
             useSupportLibrary true
         }
@@ -36,7 +45,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion AndroidX.composeVersion
     }
     packagingOptions {
         resources {
@@ -46,17 +55,29 @@ android {
 }
 
 dependencies {
+    implementation AndroidX.coreKtx
+    implementation AndroidX.composeUi
+    implementation AndroidX.composeMaterial
+    implementation AndroidX.composeToolingPreview
+    implementation AndroidX.composeActivity
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    testImplementation UnitTesting.mockk
+    testImplementation UnitTesting.jUnit
+
+    debugImplementation AndroidX.composeToolingPreview
+    debugImplementation AndroidX.composeUiTestManifest
+
+    implementation AndroidX.lifeCycleViewModel
+    implementation AndroidX.lifeCycleLiveData
+    implementation AndroidX.lifeCycleProcess
+    implementation AndroidX.lifeCycleLivedataCore
+    implementation AndroidX.lifeCycleCompose
+    implementation AndroidX.lifeCycleRuntime
+
+    androidTestImplementation AndroidX.junitExt
+    androidTestImplementation AndroidX.testEspresso
+    androidTestImplementation AndroidX.composeUiTestJunit
+
+    implementation Google.hilt
+    kapt Google.hiltCompiler
 }
