--- a/base/core/build.gradle
+++ b/base/core/build.gradle
@@ -1,2 +1,35 @@
-apply from: "$rootDir/shared_config.gradle"
+import com.julo.weatherdex.AndroidConfig
+import com.julo.weatherdex.Build
+import com.julo.weatherdex.Plugins
+
+apply plugin: Plugins.androidLibrary
+apply plugin: Plugins.kotlinAndroid
+apply plugin: Plugins.kotlinKapt
+apply plugin: Plugins.kotlinParcelize
+apply plugin: Plugins.kotlinxSerialization
+apply plugin: Plugins.daggerHilt
+
 apply from: "$rootDir/build_type.gradle"
+apply from: "$rootDir/library_dependencies.gradle"
+
+android {
+    compileSdkVersion AndroidConfig.compileSdkVersion
+
+    defaultConfig {
+        minSdkVersion AndroidConfig.minSdkVersion
+        targetSdkVersion AndroidConfig.targetSdkVersion
+
+        testInstrumentationRunner Build.jUnitRunner
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    with buildTypeConfig
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
