--- a/base/network/build.gradle
+++ b/base/network/build.gradle
@@ -1,3 +1,5 @@
+import com.julo.weatherdex.AndroidConfig
+import com.julo.weatherdex.Build
 import com.julo.weatherdex.Plugins
 import com.julo.weatherdex.libs.AndroidX
 import com.julo.weatherdex.libs.Chucker
@@ -10,7 +12,29 @@ apply plugin: Plugins.kotlinAndroid
 apply plugin: Plugins.kotlinKapt
 apply plugin: Plugins.daggerHilt
 
+android {
+    compileSdkVersion AndroidConfig.compileSdkVersion
+
+    defaultConfig {
+        minSdkVersion AndroidConfig.minSdkVersion
+        targetSdkVersion AndroidConfig.targetSdkVersion
+
+        testInstrumentationRunner Build.jUnitRunner
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+}
+
 dependencies {
+    implementation AndroidX.coreKtx
+
     implementation Jetbrains.coroutineCore
 
     /** Chucker **/
