--- a/build.gradle
+++ b/build.gradle
@@ -5,22 +5,25 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jitpack.io" }
+        jcenter() // Warning: this repository is going to shut down soon
     }
     dependencies {
         classpath Build.gradle
         classpath Build.gradlePlugin
         classpath Build.hiltGradlePlugin
         classpath Build.kotlinSerialization
+        classpath Build.jetbrains
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
+        classpath 'com.android.tools.build:gradle:7.4.1'
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-        jcenter() // Warning: this repository is going to shut down soon
-    }
+plugins {
+    id 'com.android.application' version '7.4.1' apply false
+    id 'com.android.library' version '7.4.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id "org.jetbrains.kotlin.kapt" version "1.8.10"
 }
 
 task clean(type: Delete) {
