--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:theme="@style/Theme.Weatherdex"
         tools:targetApi="31">
         <activity
-            android:name=".pages.MainActivity"
+            android:name=".pages.main.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.Weatherdex">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".pages.detail.DetailActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Weatherdex"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
