--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ android {
 dependencies {
     implementation project(":data:city")
     implementation project(":data:weather")
+    implementation project(":data:favorites")
     implementation project(":base:network")
     implementation project(":base:core")
 
