--- a/settings.gradle
+++ b/settings.gradle
@@ -18,4 +18,5 @@ include ':app'
 include ':base:network'
 include ':data:city'
 include ':data:weather'
+include ':data:favorites'
 include ':base:core'
