--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Weatherdex"
         tools:targetApi="31">
         <activity
-            android:name=".pages.main.MainActivity"
+            android:name=".AppEntryActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"
-            android:theme="@style/Theme.Weatherdex">
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,11 +24,6 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".pages.detail.DetailActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Weatherdex"
-            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
