--- a/weather/src/main/AndroidManifest.xml
+++ b/weather/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.julo.weatherdex.weather">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application>
         <activity
             android:name=".pages.search.WeatherSearchCityActivity"
